@@ -79,6 +79,10 @@ class phodevi_system extends phodevi_device_interface
 		{
 			$layer = $wine;
 		}
+		else if(($wine = phodevi::read_property('system', 'wine-version')) && getenv('USE_WINE'))
+		{
+			$layer = $wine;
+		}
 		else
 		{
 			// Report virtualization
@@ -2003,6 +2007,10 @@ class phodevi_system extends phodevi_device_interface
 		if(pts_client::executable_in_path('wine') != false)
 		{
 			$wine_version = trim(shell_exec('wine --version 2>&1'));
+		}
+		else if(($use_wine = getenv('USE_WINE')) !== false && is_executable($use_wine))
+		{
+			$wine_version = trim(shell_exec($use_wine . ' --version 2>&1'));
 		}
 		else if(pts_client::executable_in_path('winecfg.exe') != false && pts_client::read_env('WINE_VERSION'))
 		{
